--- a/src/JokesTray.css
+++ b/src/JokesTray.css
@@ -61,6 +61,11 @@
 	box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.1);
 }
 
+.JokesTray-alljokes p {
+	font-size: 1.5rem;
+	line-height: 20em;
+}
+
 .JokesTray-getmore {
 	font-size: 1.2rem;
 	width: 50%;
