--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
   color: #78909c;
   background: linear-gradient(
     135deg,
-    rgba(179, 229, 252, 1) 0%,
-    rgba(179, 229, 252, 1) 50%,
+    rgba(255,205,210, 1) 0%,
+    rgba(255,205,210, 1) 50%,
     rgba(240, 98, 146, 1) 50%,
     rgba(240, 98, 146, 1) 100%
   );
